Adds colors, margins, borders to styling

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
-body{
-    background: blue
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+header {
+    backround: white
+}
+
+header > h1 {
+color: blue
+
 }
