--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,22 @@ body {
     top: 10px;
     right: 5px;
 }
+
+.result > p {
+
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif
+}
+
+.options {
+    text-align: center;
+    margin: 50PX 0;
+
+}
+
+.option {
+    display: inline-block;
+    margin: 0 25px;
+    
+}
